force-app/main/default/objects/CC_Config_Stores__mdt/CC_Config_Stores__mdt.object-meta.xml
<CustomObject>
    <label>Configuración de Store</label>
    <pluralLabel>Configuración de Stores</pluralLabel>
</CustomObject>