force-app/main/default/objects/CC_Config_Stores__mdt/fields/App_Name__c.field-meta.xml
<CustomField>
    <fullName>App_Name__c</fullName>
    <description>Nombre de la APP parametrizado para que sea igual independientemente de si es Google o Apple</description>
    <label>App Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>