force-app/main/default/objects/CC_Config_Stores__mdt/fields/Identificador__c.field-meta.xml
<CustomField>
    <fullName>Identificador__c</fullName>
    <label>Identificador</label>
    <length>100</length>
    <type>Text</type>
</CustomField>