force-app/main/default/objects/CC_Config_Stores__mdt/fields/Imagen__c.field-meta.xml
<CustomField>
    <fullName>Imagen__c</fullName>
    <label>Imagen</label>
    <length>200</length>
    <type>Text</type>
</CustomField>