force-app/main/default/objects/CC_Config_Stores__mdt/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google Play</fullName>
                <default>true</default>
                <label>Google Play</label>
            </value>
            <value>
                <fullName>Apple Store</fullName>
            </value>
            <value>
                <fullName>Huawei Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>