force-app/main/default/objects/CC_Config_Stores__mdt/listViews/CC_Todos.listView-meta.xml
<ListView>
    <fullName>CC_Todos</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Activo__c</columns>
    <columns>App_Name__c</columns>
    <columns>Tipo__c</columns>
    <columns>Identificador__c</columns>
    <columns>Imagen__c</columns>
    <columns>Canal_operativo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>